--- a/Alg7/Alg7.csproj
+++ b/Alg7/Alg7.csproj
@@ -43,8 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClosedHashTable.cs" />
     <Compile Include="Element.cs" />
-    <Compile Include="HashTable.cs" />
+    <Compile Include="OpenHashTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
